# avr_cross_compile

./: .gitmodules  CMakeLists.txt  README.md  main.c
